[gd_scene load_steps=2 format=3 uid="uid://d1bw14eqynkqy"]

[ext_resource type="Script" uid="uid://bxrb83fsk2x32" path="res://scenes/LevelUpScene.gd" id="1_mxvaw"]

[node name="LevelUpScene" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = -8.0
offset_bottom = -8.0
script = ExtResource("1_mxvaw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -24.0
offset_top = -16.0
offset_right = 1128.0
offset_bottom = 648.0
scale = Vector2(1.08, 1.16)
color = Color(0, 0, 0, 0.796078)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 72.0
offset_right = 960.0
offset_bottom = 656.0

[node name="LevelUpLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "LEVEL UP!
Spend your attribute points."
horizontal_alignment = 1

[node name="LevelContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="LevelTextLabel" type="Label" parent="MainContainer/LevelContainer"]
layout_mode = 2
text = "Level: "

[node name="LevelValueLabel" type="Label" parent="MainContainer/LevelContainer"]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Attribute Points: "

[node name="PointsValueLabel" type="Label" parent="MainContainer"]
layout_mode = 2

[node name="AttributeGrid" type="GridContainer" parent="MainContainer"]
layout_mode = 2

[node name="DoneButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Done"
